changed float to double